<resources>
    <string name="app_name">MediApp</string>
    <string name="home">HOME</string>
    <string name="mediapp">MediApp</string>
    <string name="press_me">Press Me!</string>
    <string name="not_ready">Not Ready</string>
    <string name="ready">Ready</string>
    <string name="medi_app">Medi-App</string>
    <string name="mediapp_logo">mediapp_logo</string>
    <string name="sign_in">sign in</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="back">back</string>
    <string name="attempt_3">Attempt: 3</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="login_title">Login</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">sign out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="feedback">Feedback</string>
    <string name="add_edit_details">Add/Edit Details</string>
</resources>